[package]
name = "chum"
version = "0.1.0"
authors = ["Kody Kantor <kody@kkantor.com>"]
edition = "2018"

[dependencies]
clap = "~2.33.0"
rand = "0.6"
regex = "1"
uuid = { version = "0.8", features = ["v4"] }
curl = { version = "0.4", features = ["http2"] }
rusoto_s3 = "0.42.0"
rusoto_core = "0.42.0"
rusoto_credential = "0.42.0"
statemap = { git = "https://github.com/kodykantor/rust-statemap" }
chrono = "0.4"
fs3 = "0.5.0"
libc = "0.2"
